%% Data Structures — All Types Across Every Package
%% Source of truth: the actual Go source code (not specs).
%%
%% Updated after Task 5: enrichment types, new message types, new API functions,
%% and new metadata functions are now implemented in the code.

classDiagram
    namespace domain {
        class Task {
            +String FilePath
            +String Title
            +String Artist
            +String Album
            +String Genre1
            +String Genre2
            +String Year
            +String BPM
        }

        class AppConfig {
            +String MusicFolder
            +String JsonPath
            +StringList GenreList
            +int SeekDeltaSeconds
            +ApiKeysConfig ApiKeys
        }

        class ApiKeysConfig {
            +String MusicBrainzUserAgent
        }

        class ReviewQueue {
            +TaskList Tasks
            +int CurrentIndex
            +TaskList History
        }
    }

    AppConfig *-- ApiKeysConfig : contains

    namespace provider {
        class TaskProvider {
            <<interface>>
            +GetTasks() TaskList_error
        }

        class ManualReviewProvider {
            +AppConfig Config
            +GetTasks() TaskList_error
            +SaveState(tasks TaskList) error
        }

        class manualReviewFile {
            -reviewEntryList ManualReview
        }

        class reviewEntry {
            -String FilePath
            -String Reason
            -int Confidence
            -String Status
            -String PrimaryGenre
            -String SecondaryGenre
            -String BPM
            -String Year
        }
    }

    ManualReviewProvider ..|> TaskProvider : implements
    ManualReviewProvider --> AppConfig : uses Config field
    ManualReviewProvider --> Task : produces and consumes
    manualReviewFile *-- reviewEntry : contains

    namespace audio {
        class Engine {
            -Mutex mu
            -StreamSeekCloser streamer
            -Format format
            -BeepCtrl ctrl
            -File fileHandle
            -bool speakerInitialized
            +NewEngine()$ Engine_ptr
            +Play(path String) error
            +Seek(delta Duration) error
            +TogglePause()
            +GetState() PlaybackState
            +Close()
            -initSpeaker() error
            -stopCurrent()
        }

        class PlaybackState {
            +float64 Progress
            +String Elapsed
            +String Total
            +String Position
        }
    }

    Engine --> PlaybackState : returns from GetState

    namespace tui {
        class AppState {
            <<enumeration>>
            StateReviewing
            StateGenreSelection
        }

        class GenreStep {
            <<enumeration>>
            stepPrimary_0
            stepSecondary_1
        }

        class enrichStatus {
            <<enumeration>>
            enrichIdle
            enrichLoading
            enrichFound
            enrichCommitted
            enrichError
        }

        class Model {
            +ReviewQueue queue
            +Engine_ptr engine
            +ManualReviewProvider providerRef
            +ProgressModel progress
            +PlaybackState playbackState
            +Duration seekDelta
            +AppState state
            +ListModel genreList
            +int genreStep
            +String selectedPrimary
            +AppConfig cfg
            +error lastPlayErr
            +error lastSaveErr
            +enrichStatus enrichYearStatus
            +String enrichYearValue
            +enrichStatus enrichBPMStatus
            +String enrichBPMValue
            +TimeList tapTimes
            +SpinnerModel spinner
            +int width
            +int height
            +TeaCmd pendingInit
            +Init() TeaCmd
            +Update(msg TeaMsg) TeaModel_TeaCmd
            +View() String
            -handleKey(msg KeyMsg) TeaModel_TeaCmd
            -confirmGenreSelection() TeaModel_TeaCmd
            -skipToNext() TeaModel_TeaCmd
            -undoLast() TeaModel_TeaCmd
            -openGenreModal() Model
            -resetEnrichment() Model
            -recordTap() TeaModel_TeaCmd
            -isTappingIrregular() bool
            -viewReviewing() String
            -viewGenreModal() String
            -viewEnrichmentPanel() String
            -enrichFieldView(...) String
            -bpmLoadingText(tapCount int) String
        }

        class TickMsg {
            <<tea.Msg>>
            Time value
        }

        class PlayErrMsg {
            <<tea.Msg>>
            +error Err
        }

        class TagWrittenMsg {
            <<tea.Msg>>
            +String Primary
            +String Secondary
            +error Err
        }

        class SaveStateErrMsg {
            <<tea.Msg>>
            +error Err
        }

        class YearFetchedMsg {
            <<tea.Msg>>
            +String Year
            +error Err
        }

        class BPMFetchedMsg {
            <<tea.Msg>>
            +String BPM
            +error Err
        }

        class BPMWrittenMsg {
            <<tea.Msg>>
            +String BPM
            +error Err
        }

        class YearWrittenMsg {
            <<tea.Msg>>
            +String Year
            +error Err
        }

        class genreItem {
            +String title
            +Title() String
            +Description() String
            +FilterValue() String
        }
    }

    Model *-- ReviewQueue : contains queue
    Model *-- PlaybackState : caches playbackState
    Model *-- AppState : tracks state
    Model *-- AppConfig : holds cfg
    Model *-- enrichStatus : enrichYearStatus and enrichBPMStatus
    Model --> Engine : references engine
    Model --> ManualReviewProvider : references providerRef
    Model ..> TickMsg : handles
    Model ..> PlayErrMsg : handles
    Model ..> TagWrittenMsg : handles
    Model ..> SaveStateErrMsg : handles
    Model ..> YearFetchedMsg : handles
    Model ..> BPMFetchedMsg : handles
    Model ..> BPMWrittenMsg : handles
    Model ..> YearWrittenMsg : handles
    Model ..> genreItem : uses in genreList

    namespace metadata {
        class MetadataWriter {
            <<module>>
            +WriteTags(path String, primary String, secondary String) error
            +WriteBPM(path String, bpm String) error
            +WriteYear(path String, year String) error
        }
    }

    namespace api {
        class MusicBrainzClient {
            <<module>>
            +FetchYear(artist String, title String, userAgent String) String_error
            +FetchBPM(artist String, title String, userAgent String) String_error
            -buildRecordingQuery(artist String, title String) String
            -doRecordingSearch(query String, userAgent String) mbRecordingSearchResponse_error
            -extractBPMFromTag(tagName String) String
        }

        class mbRecordingSearchResponse {
            +mbRecordingList Recordings
        }

        class mbRecording {
            +mbReleaseGroupRefList ReleaseGroups
            +mbTagList Tags
        }

        class mbReleaseGroupRef {
            +String ID
            +String FirstReleaseDate
        }

        class mbTag {
            +String Name
            +int Count
        }
    }

    MusicBrainzClient --> mbRecordingSearchResponse : parses
    mbRecordingSearchResponse *-- mbRecording : contains
    mbRecording *-- mbReleaseGroupRef : contains
    mbRecording *-- mbTag : contains

    Model ..> MetadataWriter : writeTagsCmd calls WriteTags\nwriteBPMCmd calls WriteBPM\nwriteYearCmd calls WriteYear
    Model ..> ManualReviewProvider : saveStateCmd calls SaveState
    Model ..> MusicBrainzClient : fetchYearCmd calls FetchYear\nfetchBPMCmd calls FetchBPM
